Add FirstTimeLaunchPage and refactor main view
Introduces FirstTimeLaunchPage for initial setup and updates navigation logic to use it when the app is not installed. Renames Main.xaml and Main.xaml.cs to InstallPage.xaml and InstallPage.xaml.cs, updating references throughout the codebase. Installer logic in Installer.cs is commented out for future revision.

--- a/AppInstaller/AppInstaller.csproj
+++ b/AppInstaller/AppInstaller.csproj
@@ -15,8 +15,8 @@
 	<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Views\FirstTimeLaunchPage.xaml" />
     <None Remove="Views\InstallPromptUser.xaml" />
-    <None Remove="Views\Main.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,12 +46,17 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
   </ItemGroup>
   <ItemGroup>
+    <Page Update="Views\FirstTimeLaunchPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="Views\InstallPromptUser.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Page Update="Views\Main.xaml">
+    <Page Update="Views\InstallPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
