--- a/AppInstaller/AppInstaller.csproj
+++ b/AppInstaller/AppInstaller.csproj
@@ -13,6 +13,9 @@
     <Nullable>enable</Nullable>
 	<WindowsPackageType>None</WindowsPackageType>
 	<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
+	  <EnableDefaultApplicationPackageReferences>false</EnableDefaultApplicationPackageReferences>
+	  <DisableWinRTActivation>true</DisableWinRTActivation>
+	  <StartupObject>AppInstaller.EntryPoint</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\FirstTimeLaunchPage.xaml" />
