Refactored app into separate components

--- a/AppInstaller/AppInstaller.csproj
+++ b/AppInstaller/AppInstaller.csproj
@@ -49,6 +49,9 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="Views\FirstTimeLaunchPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
