Refactored the console logic to become more modular and extendible

--- a/AppInstallerCLI/AppInstaller.csproj
+++ b/AppInstallerCLI/AppInstaller.csproj
@@ -16,6 +16,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
+    <ProjectReference Include="..\ConsoleLibrary\ConsoleLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
